# torchtrainer

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
ml-trainer/Trainer/: scheduler.py  trainer.py
ml-training/trainer/: trainer.py
ml_training/trainer/: __init__.py  trainer.py
src/example/: example.ipynb  example_kf.ipynb  log.csv
src/example/checkpoints/: checkpoint-48.pth.tar
src/ml_training/hooks/: __init__.py  base_hook.py  logging.py  stopping.py
src/ml_training/trainer/: trainer.py
src/torch-trainer/hooks/: base_hook.py
src/torch-trainer/trainer/: trainer.py
src/torchtrainer/: __init__.py
src/torchtrainer/hooks/: base_hook.py  logging.py  stopping.py
src/torchtrainer/trainer/: __init__.py  load_model.py  scheduler.py  trainer.py
