[metadata]
name = ml_training
version = attr: ml_training.__version__.__version__
author = Kento Nishio
author_email = knishio@iis.u-tokyo.ac.jp
description = ML-Training - Module to ease the training process of machine learning.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ken2403/ml-training
license = MIT

[options]
zip_safe = False
python_requires = >=3.6
package_dir=
    =ml-training
packages=find:
install_requires =
    torch>=1.7
    numpy
    h5py

[options.packages.find]
where=ml-training

[options.extras_require]
test =
    pytest
    sacred
    pytest-console-scripts
    pytest-datadir
