[metadata]
name = torchtrainer
version = attr: torchtrainer.__version__.__version__
author = Kento Nishio
author_email = knishio@iis.u-tokyo.ac.jp
description = TorchTrainer - Simplify the learning process of PyTorch-based models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ken2403/torchtrainer
license = MIT

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find:
include_package_data=True
install_requires =
    dill
    numpy
    torch>=1.7

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    sacred
    pytest-console-scripts
    pytest-datadir
